--- a/package.json
+++ b/package.json
@@ -7,13 +7,18 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "clean": "npx react-native start --reset-cache",
+    "clean:android": "cd android && ./gradlew clean && cd ..",
+    "clean:ios": "cd ios && rm -rf build && rm -rf Pods && pod install && cd ..",
+    "clean:all": "npm run clean:android && npm run clean:ios && npm run clean"
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^5.2.4",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "@supabase/supabase-js": "^2.56.1",
     "@tanstack/react-query": "^5.85.5",
     "date-fns": "^4.1.0",
     "i18next": "^25.4.2",
@@ -21,12 +26,14 @@
     "react-hook-form": "^7.62.0",
     "react-i18next": "^15.7.3",
     "react-native": "0.79.0",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-localize": "^3.5.2",
     "react-native-mmkv": "^3.2.0",
     "react-native-reanimated": "^3.19.1",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.15.4",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.1.0",
     "zod": "^4.1.5",
     "zustand": "^5.0.8"
