--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Flow_Max",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -15,9 +15,12 @@
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^5.2.4",
+    "@hookform/resolvers": "^5.2.1",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "@react-navigation/stack": "^6.3.20",
     "@supabase/supabase-js": "^2.56.1",
     "@tanstack/react-query": "^5.85.5",
     "date-fns": "^4.1.0",
@@ -26,8 +29,10 @@
     "react-hook-form": "^7.62.0",
     "react-i18next": "^15.7.3",
     "react-native": "0.79.0",
+    "react-native-calendars": "^1.1313.0",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.28.0",
+    "react-native-image-picker": "^8.2.1",
     "react-native-localize": "^3.5.2",
     "react-native-mmkv": "^3.2.0",
     "react-native-reanimated": "^3.19.1",
@@ -40,6 +45,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@babel/plugin-transform-export-namespace-from": "^7.27.1",
     "@babel/preset-env": "^7.25.3",
     "@babel/runtime": "^7.25.0",
     "@react-native-community/cli": "18.0.0",
