--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.3.20",
+    "@sentry/react-native": "^7.0.1",
     "@supabase/supabase-js": "^2.56.1",
     "@tanstack/react-query": "^5.85.5",
     "date-fns": "^4.1.0",
@@ -30,6 +31,7 @@
     "react-i18next": "^15.7.3",
     "react-native": "0.79.0",
     "react-native-calendars": "^1.1313.0",
+    "react-native-confetti-cannon": "^1.5.2",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-image-picker": "^8.2.1",
