feat: Implement comprehensive notification system
- Add Firebase Cloud Messaging integration with @react-native-firebase
- Add Notifee for modern notification display on Android 12+
- Implement local notification scheduling with react-native-push-notification
- Add notification settings screen with time picker and days selector
- Add habit reminder notifications on creation and via settings
- Add motivational message notifications
- Replace FormInput switches with custom Switch component
- Add comprehensive translations for all languages (ru, en, uk, kk)
- Add notification permissions handling for Android
- Add MMKV integration for notification data caching
- Add notification test screens and debugging tools
- Update Android configuration for notifications and Firebase
- Add Supabase migration for notification tables
- Add notification hooks and services for easy integration

--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,4 +1,13 @@
-pluginManagement { includeBuild("../node_modules/@react-native/gradle-plugin") }
+pluginManagement { 
+    repositories {
+        google()
+        mavenCentral()
+        gradlePluginPortal()
+        maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
+        maven { url 'https://www.jitpack.io' }
+    }
+    includeBuild("../node_modules/@react-native/gradle-plugin") 
+}
 plugins { id("com.facebook.react.settings") }
 extensions.configure(com.facebook.react.ReactSettingsExtension){ ex -> ex.autolinkLibrariesFromCommand() }
 rootProject.name = 'Flow_Max'
