--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
   "dependencies": {
     "@gorhom/bottom-sheet": "^5.2.4",
     "@hookform/resolvers": "^5.2.1",
+    "@notifee/react-native": "^7.8.2",
     "@react-native-community/netinfo": "^11.4.1",
+    "@react-native-firebase/app": "^23.3.1",
+    "@react-native-firebase/messaging": "^23.3.1",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
@@ -37,6 +40,7 @@
     "react-native-image-picker": "^8.2.1",
     "react-native-localize": "^3.5.2",
     "react-native-mmkv": "^3.2.0",
+    "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "^3.19.1",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.15.4",
@@ -59,6 +63,7 @@
     "@react-native/typescript-config": "0.79.0",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.0.0",
+    "@types/react-native-push-notification": "^8.1.4",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^19.0.0",
     "eslint": "^8.19.0",
